Add responsive footer + formatting

--- a/index.html
+++ b/index.html
@@ -1,72 +1,84 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link href="./resources/styles.css" type="text/css" rel="stylesheet">
-  <title>Is It Healthy?</title>
-</head>
+  <head>
+    <link href="./resources/styles.css" type="text/css" rel="stylesheet" />
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <title>Is It Healthy?</title>
+  </head>
 
-<body>
-  
-  <div class="nav">
-    <a href="#about">About</a>
-    <a>Download</a>
-    <a href="#contact">Contact</a>
-  </div>
-  
-  <h1 class="title">Is It <span>Healthy?</span>
-    <h2 class="about">About</h2>
-      <img class="img" src="./resources/images/shoes.jpg" alt="Water Sailing"/>
-        <p>If you like to know what you eat and you are not a food specialist, dietition or you just don't have time to Google every ingeredient of the product in the supermarket, you are in the good place.  
-    <h2 class="meetings">Our Goals</h2>
+  <body>
+    <div class="nav">
+      <a href="#about">About</a>
+      <a>Download</a>
+      <a href="#contact">Contact</a>
+    </div>
+
+    <header class="header">
+      <h1 class="title">Is It <span>Healthy?</span></h1>
+    </header>
+    <div class="content">
+      <h2 class="about">About</h2>
+      <img class="img" src="./resources/images/shoes.jpg" alt="Water Sailing" />
+      <p>
+        If you like to know what you eat and you are not a food specialist,
+        dietition or you just don't have time to Google every ingeredient of the
+        product in the supermarket, you are in the good place.
+      </p>
+      <h2 class="meetings">Our Goals</h2>
       <h3>Responsible Choices</h3>
-        <img class="img" src="./resources/images/food-choices.jpg" alt="Supermarket"/>
-        <p>Slowly you will get to know more about food. </p>
+      <img
+        class="img"
+        src="./resources/images/food-choices.jpg"
+        alt="Supermarket"
+      />
+      <p>Slowly you will get to know more about food.</p>
       <h3>Education</h3>
-        <img class="img" src="./resources/images/food.jpg" alt="Food"/>
-        <p>Slowly you will get to know more about food. </p>
-    <h2 class="location">How does it work?</h2>
-      <img class="img" src="./resources/images/shopping-bag.jpg" alt="Shopping Bag"/>
+      <img class="img" src="./resources/images/food.jpg" alt="Food" />
+      <p>Slowly you will get to know more about food.</p>
+      <h2 class="location">How does it work?</h2>
+      <img
+        class="img"
+        src="./resources/images/shopping-bag.jpg"
+        alt="Shopping Bag"
+      />
       <p>It could not be siplier!</p>
-        <ul>
-            <li>Scan the product with your phone</li>
-            <li>Ask app: "Is it healthy?"</li>
+      <ul>
+        <li>Scan the product with your phone</li>
+        <li>Ask app: "Is it healthy?"</li>
+      </ul>
+    </div>
 
-        </ul>
+    <footer class="footer-distributed">
+      <div class="footer-left">
+        <h3>Is It <span>Healthy?</span></h3>
 
-        <footer class="footer-distributed">
+        <p class="footer-links">
+          <a href="#">Contact</a>
+        </p>
+        <p class="footer-company-name">© 2020 Is It Healthy? Ltd.</p>
+      </div>
 
-          <div class="footer-left">
-            <h3>Is It <span>Healthy?</span></h3>
-    
-            <p class="footer-links">
-              <a href="#">Contact</a>
-            </p>
-            <p class="footer-company-name">© 2020 Is It Healthy? Ltd.</p>
-          </div>
-    
-          <div class="footer-center">
-            <div>
-              <p><span>California</span>
-                  USA</p>
-            </div>
-            <div>
-              <p>+89898989898</p>
-            </div>
-            <div>
-              <p>support@isithealthy.com</p>
-            </div>
-          </div>
-          <div class="footer-right">
-            <p class="footer-find-us">Find us on</p>
-            <div class="footer-icons">
-              <a href="#"><i class="fa fa-facebook"></i></a>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-              <a href="#"><i class="fa fa-instagram"></i></a>
-              <a href="#"><i class="fa fa-linkedin"></i></a>
-              <a href="#"><i class="fa fa-youtube"></i></a>
-            </div>
-          </div>
-        </footer>
-
-</body>
+      <div class="footer-center">
+        <div>
+          <p><span>California,</span> USA</p>
+        </div>
+        <div>
+          <p class="phone">+ 89898989898</p>
+        </div>
+        <div>
+          <p class="email">support@isithealthy.com</p>
+        </div>
+      </div>
+      <div class="footer-right">
+        <p class="footer-find-us">Find us on</p>
+        <div class="footer-icons">
+          <a href="#"><i class="fa fa-facebook"></i></a>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-instagram"></i></a>
+          <a href="#"><i class="fa fa-linkedin"></i></a>
+          <a href="#"><i class="fa fa-youtube"></i></a>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
