Implement menu bar

--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html>
   <head>
     <link href="./resources/styles.css" type="text/css" rel="stylesheet" />
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
+    />
     <title>Is It Healthy?</title>
   </head>
 
   <body>
     <div class="nav">
-      <a href="#about">About</a>
-      <a>Download</a>
-      <a href="#contact">Contact</a>
+      <ul>
+        <li class="li">About</li>
+        <li class="li">Download</li>
+        <li class="li">Contact</li>
+      </ul>
     </div>
 
     <header class="header">
