paragraphs alignement and responsive acpect of the website

--- a/index.html
+++ b/index.html
@@ -21,36 +21,51 @@
     <header class="header">
       <h1 class="title">Is It <span>Healthy?</span></h1>
     </header>
+
     <div class="content">
       <h2 class="about">About</h2>
-      <img class="img" src="./resources/images/shoes.jpg" alt="Water Sailing" />
-      <p>
+      <img
+        class="content_img"
+        src="./resources/images/shoes.jpg"
+        alt="Water Sailing"
+      />
+      <p class="content_paragraph">
         If you like to know what you eat and you are not a food specialist,
         dietition or you just don't have time to Google every ingeredient of the
         product in the supermarket, you are in the good place.
       </p>
-      <h2 class="meetings">Our Goals</h2>
-      <h3>Responsible Choices</h3>
+
+      <h2 class="our_goals">Our Goals</h2>
       <img
-        class="img"
+        class="content_img"
         src="./resources/images/food-choices.jpg"
         alt="Supermarket"
       />
-      <p>Slowly you will get to know more about food.</p>
-      <h3>Education</h3>
-      <img class="img" src="./resources/images/food.jpg" alt="Food" />
-      <p>Slowly you will get to know more about food.</p>
-      <h2 class="location">How does it work?</h2>
+      <div class="content_paragraph">
+        <h3>Responsible Choices</h3>
+        <p>Slowly you will get to know more about food.</p>
+      </div>
+
+      <img class="content_img" src="./resources/images/food.jpg" alt="Food" />
+      <div class="content_paragraph">
+        <h3>Education</h3>
+        <p>Slowly you will get to know more about food.</p>
+      </div>
+      <h2 class="instruction">How does it work?</h2>
       <img
-        class="img"
+        class="content_img"
+        id="shopping_bag"
         src="./resources/images/shopping-bag.jpg"
         alt="Shopping Bag"
       />
-      <p>It could not be siplier!</p>
-      <ul>
-        <li>Scan the product with your phone</li>
-        <li>Ask app: "Is it healthy?"</li>
-      </ul>
+
+      <div class="content_paragraph">
+        <h3>It could not be siplier!</h3>
+        <ol>
+          <li>Scan the product with your phone</li>
+          <li>Ask app: "Is it healthy?"</li>
+        </ol>
+      </div>
     </div>
 
     <footer class="footer-distributed">
